# naturalneighbor

./: .gitignore  Cargo.toml  Makefile  README.md
benches/: benchmark.rs
examples/: color.rs  minimal.rs  visualized.rs
src/: circle.rs  lib.rs  primitives.rs  util.rs
tests/: on_edge.rs  on_point.rs  query_weights.rs  random_points.rs
