[package]
name = "naturalneighbor"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "2D Natural Neighbor Interpolation (NNI) library for Rust."
authors = ["Teruki TADA <tadateruki.public@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"delaunator" = "1.0.2"
"rstar" = "0.11.0"

[dev-dependencies]
"image" = "0.24.7"
"rand" = "0.8.4"
